Fix bug 1239801 - home promo missing App Store button on iOS
Fix bug 1239814 - home promo shows desktop links for Android devices

--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -637,6 +637,7 @@ html[lang^='en'] {
 .android .download-button-desktop .download-list,
 .android .download-button-desktop small.os_win,
 .download-button-ios .os_ios,
+.ios .download-button .os_ios,
 .ios .download-button .ios-download,
 .ios .download-button-desktop .download-list,
 .no-js .download-button-android .download-list,
